--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- Skills Section -->
     <section class="section">
       <div class="container">
-        <h2>Teknik Yetenekler</h2>
+        <h2>Competencies</h2>
         <div class="row">
           <div class="col-md-6">
             <h4>Frontend</h4>
