--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
           <div class="col-md-6">
             <h4>Frontend</h4>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JavaScript</li>
-              <li>React</li>
-              <li>Angular</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
             </ul>
           </div>
           <div class="col-md-6">
             <h4>Backend</h4>
             <ul>
-              <li>Node.js</li>
-              <li>Express</li>
-              <li>Django</li>
-              <li>Flask</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
+              <li>Skill</li>
             </ul>
           </div>
         </div>
