--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               required
             ></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send</button>
+          <button type="submit" class="btn btn-secondary">Send</button>
         </form>
       </div>
     </section>
