--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section class="section contact-section">
       <div class="container">
         <h2>Contact</h2>
-        <form action="https://formspree.io/f/mrbzkeky" method="post">
+        <form >
           <div class="form-group">
             <label for="name">Name</label>
             <input
