--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full Stack Developer | Ahmet Arif AYDIN</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -13,143 +13,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Hero Section -->
     <section class="hero-section">
-      <div class="container">
+      <div class="conteiner">
         <h1>Ahmet Arif AYDIN</h1>
         <p>Full Stack Developer</p>
       </div>
     </section>
-    <!--  -->
 
-    <!-- About Section -->
     <section class="about-section">
-      <div class="container">
-        <h1>About me</h1>
+      <div class="conteiner">
+        <h2>Lorem, ipsum.</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas sint
-          expedita iusto molestias nesciunt magni iste amet provident corrupti
-          blanditiis, ullam quibusdam! Suscipit illum blanditiis omnis
-          laboriosam incidunt perferendis dicta numquam quisquam aperiam vitae
-          laborum, porro debitis facilis soluta quam exercitationem aliquam
-          repellendus.
-          <br /><br />
-          Quae ducimus quas, doloribus cupiditate ad facere hic. Sit, ex. Atque
-          labore, veniam qui magni nobis ipsa voluptates animi inventore tempore
-          magnam est quia, aperiam ullam autem ab illo quae laboriosam sint
-          libero. Placeat, delectus facere dolor nulla expedita veniam. Atque
-          quas accusamus voluptatibus ducimus quis consequuntur, nostrum non,
-          nesciunt molestiae provident, ullam at minima?
-          <br /><br />
-          Officia itaque perspiciatis expedita molestias dolore quidem? Rem
-          explicabo ratione, assumenda aliquam sit rerum debitis nesciunt quae
-          odio dolore sint, optio, veniam voluptate itaque ut voluptatem aliquid
-          facilis quas dolorem dignissimos. Odit id eius alias, quidem quis
-          expedita. Placeat eligendi commodi fugiat dolorem.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+          corporis maxime, velit eos ab hic. Enim ullam dignissimos pariatur
+          vitae voluptatem. Laudantium tenetur quia nostrum recusandae
+          voluptates doloribus, ad, alias, fuga odit architecto enim! Ut, ipsam.
+          Explicabo id blanditiis quos alias deleniti eligendi nihil hic
+          possimus. Corrupti vitae adipisci quis!
         </p>
       </div>
     </section>
-    <!--  -->
 
-    <!-- Skills Section -->
-    <section class="section">
-      <div class="container">
-        <h2>Competencies</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <h4>Frontend</h4>
-            <ul>
-              <li>Skill</li>
-              <li>Skill</li>
-              <li>Skill</li>
-              <li>Skill</li>
-              <li>Skill</li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <h4>Backend</h4>
-            <ul>
-              <li>Skill</li>
-              <li>Skill</li>
-              <li>Skill</li>
-              <li>Skill</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!--  -->
-
-    <!-- Contact Section -->
-    <section class="section contact-section">
-      <div class="container">
+    <section class="contact-section">
+      <div class="conteiner contact-div">
         <h2>Contact</h2>
-        <form >
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              placeholder="Enter your name"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
+        <form action="https://formspree.io/f/mrbzkeky" method="post">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"
+              >Email address</label
+            >
             <input
               type="email"
               class="form-control"
-              id="email"
-              placeholder="Enter your email"
-              required
+              id="exampleFormControlInput1"
+              placeholder="name@example.com"
             />
           </div>
-          <div class="form-group">
-            <label for="subject">Subject</label>
-            <input
-              type="text"
-              class="form-control"
-              id="subject"
-              placeholder="Enter subject"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="message">Message</label>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label"
+              >Example textarea</label
+            >
             <textarea
               class="form-control"
-              id="message"
-              rows="4"
-              placeholder="Write your message"
-              required
+              id="exampleFormControlTextarea1"
+              rows="3"
             ></textarea>
           </div>
           <button type="submit" class="btn btn-secondary">Send</button>
         </form>
       </div>
     </section>
-    <!--  -->
 
-    <!-- Contact Section -->
-    <section class="section">
-      <div class="container">
+    <section class="social-section">
+      <div class="conteiner">
         <h2>Social</h2>
-        <p>Email: ahmetarifaydin@gmail.com</p>
-        <p>
-          GitHub:
-          <a href="https://github.com/AhmetArifAYDIN"
-            >https://github.com/AhmetArifAYDIN</a
-          >
-          <br />
-          X:
-          <a href="https://x.com/AhmetArifAYDINa"
-            >https://x.com/AhmetArifAYDINa</a
-          >
-        </p>
+        <a href="https://github.com/AhmetArifAYDIN">Github</a>
+        <br />
+        <a href="https://x.com/AhmetArifAYDINa">X</a>
       </div>
     </section>
-    <!--  -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
