--- a/index.html
+++ b/index.html
@@ -10,7 +10,38 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+
+    <style>
+      .hero-section {
+        background-color: whitesmoke;
+        padding: 59px;
+        text-align: center;
+        line-height: 1.9rem;
+      }
+
+      .hero-section p,
+      .about-section p,
+      .about-section h2,
+      .contact-div,
+      .social-section div {
+        padding: 0 9%;
+      }
+
+      .about-section {
+        background-color: white;
+        padding: 59px;
+        line-height: 1.9rem;
+      }
+
+      .contact-section {
+        background-color: whitesmoke;
+        padding: 59px;
+      }
+
+      .social-section {
+        padding: 59px;
+      }
+    </style>
   </head>
   <body>
     <section class="hero-section">
