--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Contact</h2>
         <form action="https://formspree.io/f/mrbzkeky" method="post">
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label"
+            <label id="name" for="exampleFormControlInput1" class="form-label"
               >Email address</label
             >
             <input
