--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Contact</h2>
         <form action="https://formspree.io/f/mrbzkeky" method="post">
           <div class="mb-3">
-            <label id="name" for="exampleFormControlInput1" class="form-label"
+            <label for="exampleFormControlInput1" class="form-label"
               >Email address</label
             >
             <input
@@ -78,6 +78,7 @@
               class="form-control"
               id="exampleFormControlInput1"
               placeholder="name@example.com"
+              name="email"
             />
           </div>
           <div class="mb-3">
@@ -88,6 +89,7 @@
               class="form-control"
               id="exampleFormControlTextarea1"
               rows="3"
+              name="textarea"
             ></textarea>
           </div>
           <button type="submit" class="btn btn-secondary">Send</button>
