--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full Stack Developer | Ahmet Arif AYDIN</title>
+    <meta
+      name="description"
+      content="Ahmet Arif Aydın - Full Stack Developer. Explore my projects, get in touch, and follow me on social media."
+    />
+    <meta
+      name="keywords"
+      content="Ahmet Arif Aydın, Full Stack Developer, GitHub, Portfolio"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,14 +53,14 @@
   </head>
   <body>
     <section class="hero-section">
-      <div class="conteiner">
+      <div class="container">
         <h1>Ahmet Arif AYDIN</h1>
         <p>Full Stack Developer</p>
       </div>
     </section>
 
     <section class="about-section">
-      <div class="conteiner">
+      <div class="container">
         <h2>Lorem, ipsum.</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
@@ -66,7 +74,7 @@
     </section>
 
     <section class="contact-section">
-      <div class="conteiner contact-div">
+      <div class="container contact-div">
         <h2>Contact</h2>
         <form action="https://formspree.io/f/mrbzkeky" method="post">
           <div class="mb-3">
@@ -83,7 +91,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label"
-              >Example textarea</label
+              >Your Message</label
             >
             <textarea
               class="form-control"
@@ -92,17 +100,17 @@
               name="textarea"
             ></textarea>
           </div>
-          <button type="submit" class="btn btn-secondary">Send</button>
+          <button type="submit" class="btn btn-secondary">Submit</button>
         </form>
       </div>
     </section>
 
     <section class="social-section">
-      <div class="conteiner">
+      <div class="container">
         <h2>Social</h2>
-        <a href="https://github.com/AhmetArifAYDIN">Github</a>
+        <a href="https://github.com/AhmetArifAYDIN" target="_blank">Github</a>
         <br />
-        <a href="https://x.com/AhmetArifAYDINa">X</a>
+        <a href="https://x.com/AhmetArifAYDINa" target="_blank">X</a>
       </div>
     </section>
 
