--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta
       name="keywords"
-      content="Ahmet Arif Aydın, Full Stack Developer, GitHub, Portfolio"
+      content="Ahmet Arif Aydın, Full Stack Developer, GitHub, Portfolio, Ahmet Arif Aydın github"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
